--- a/JavaChallenges/JavaChallenge1/pom.xml
+++ b/JavaChallenges/JavaChallenge1/pom.xml
@@ -8,5 +8,10 @@
     <artifactId>JavaChallenge1</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <properties>
+        <compiler.version>1.8</compiler.version>
+        <maven.compiler.source>${compiler.version}</maven.compiler.source>
+        <maven.compiler.target>${compiler.version}</maven.compiler.target>
+    </properties>
 
 </project>
