--- a/JavaChallenges/JavaChallenge1/pom.xml
+++ b/JavaChallenges/JavaChallenge1/pom.xml
@@ -10,8 +10,34 @@
 
     <properties>
         <compiler.version>1.8</compiler.version>
-        <maven.compiler.source>${compiler.version}</maven.compiler.source>
-        <maven.compiler.target>${compiler.version}</maven.compiler.target>
+        <mainClass>uk.co.aquaq.javachallenge1.Runner</mainClass>
     </properties>
+
+    <build>
+        <plugins>
+            <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>${compiler.version}</source>
+                    <target>${compiler.version}</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>3.0.2</version>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <addClasspath>true</addClasspath>
+                            <classpathPrefix>lib/</classpathPrefix>
+                            <mainClass>${mainClass}</mainClass>
+                        </manifest>
+                    </archive>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
 
 </project>
